--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
     }],
     "routes": [{
+        "src": "/(.*)",
         "dest": "core/wsgi.py"
     }]
 }
