change file requirements

--- a/DockerFile
+++ b/DockerFile
@@ -15,7 +15,7 @@ RUN apt-get update \
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
  
-COPY ./requirements/dev.txt /requirements.txt
+COPY ./requirements/commun.txt /requirements.txt
 RUN pip install --no-cache-dir -r /requirements.txt \
     && rm -rf /requirements.txt
  
