--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ['3.10']
 
     steps:
     - uses: actions/checkout@v3
@@ -24,7 +24,9 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements/dev.txt
     - name: Run Tests
+      env:
+        SECRET_KEY: abcdef
       run: |
-        python manage.py test
+        pytest
