--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = core.settings.dev
+DJANGO_SETTINGS_MODULE = esl_bags.settings.dev
 python_files = tests.py test_*.py *_tests.py
 addopts =   --cov=.
             --cov-report term-missing:skip-covered
